--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -390,7 +390,7 @@ fieldset {
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
- * 2. Corrects text not wrapping in FF3 
+ * 2. Corrects text not wrapping in FF3
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 legend {
@@ -792,7 +792,7 @@ section #title {
   margin: 0 0 50px 0;
   padding: 0 0 5px 0;
 }
-section #title h1 {
+section #title h1, h2 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 40px;
