--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -792,7 +792,7 @@ section #title {
   margin: 0 0 50px 0;
   padding: 0 0 5px 0;
 }
-section #title h1, h2 {
+section #title h1, h2, h3 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-size: 40px;
